--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "buefy": "^0.8.20",
     "bulma": "^0.8.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.8.0",
+    "material-design-icons": "^3.0.1",
     "path": "^0.12.7",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
