--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/v-chart-plugin": "^0.2.1",
     "axios": "^0.19.2",
     "buefy": "^0.8.20",
     "bulma": "^0.8.2",
